--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
         <module>rainyHillsCommons</module>
     </modules>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.host.url>
+            http://localhost:9000
+        </sonar.host.url>
+    </properties>
+
     <profiles>
         <profile>
             <id>dev</id>
@@ -39,6 +46,13 @@
     </profiles>
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -77,6 +91,11 @@
                     <groupId>org.liquibase</groupId>
                     <artifactId>liquibase-maven-plugin</artifactId>
                     <version>3.5.3</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.3.0.603</version>
                 </plugin>
             </plugins>
         </pluginManagement>
