--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <sonar.host.url>
             http://localhost:9000
         </sonar.host.url>
+        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.cpd.exclusions>
             src/main/java/com/digrabok/crx/rainyhills/web/entities/Surface.java,
             src/main/java/com/digrabok/crx/rainyhills/logic/bo/Surface.java
@@ -117,13 +118,23 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>agent-for-ut</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>generate-code-coverage-report</id>
-                        <phase>test</phase>
+                        <id>agent-for-it</id>
+                        <goals>
+                            <goal>prepare-agent-integration</goal>
+                        </goals>
+                        <configuration>
+                            <destFile>${project.basedir}/../target/jacoco-it.exec</destFile>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
